# images_thumbnails_project

./: .dockerignore  .env.example.dev  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_models.py
apps/core/: apiv1_urls.py  models.py
apps/images/: admin.py  conftest.py  models.py  validators.py
apps/images/api/: permissions.py  renderers.py  serializers.py  utils.py  views.py  viewsets.py
apps/images/migrations/: 0001_initial.py
apps/images/tests/: test_models.py  test_serializers.py  test_utils.py  test_views.py
apps/plans/: admin.py  models.py
apps/plans/migrations/: 0001_initial.py
apps/plans/tests/: test_models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
requirements/: base.txt
